Add small changes to CSS

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
 body {
     display: flex;
     flex-direction:column;
+    margin: 0px;
+    padding: 0px;
 }
 
-.header-footer {
+img {
+    width: 400px;
+    height: auto;
+}
+
+.header {
     background-color: #1F2937;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
 }
 
 .hero {
@@ -20,9 +32,26 @@ body {
 
 .logo {
     font-size: 24px;
-    color: F9FAF8;
+    color: #F9FAF8;
 }
 
-.header {
+.header-top {
     display: flex;
+    flex-direction: column;
+    border: solid red;
+}
+
+.links  {
+    align-self: flex-end;
+}
+
+
+
+
+
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
