--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction:column;
     margin: 0px;
-    padding: 0px;
+    border: solid pink;
 }
 
 img {
@@ -12,6 +12,8 @@ img {
 
 .header {
     background-color: #1F2937;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 .footer {
@@ -19,10 +21,48 @@ img {
     color: #E5E7EB;
 }
 
+.heros-img1 {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    border: solid yellow;
+}
+
+.head-hero  {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    border: solid red
+}
+
+.heros {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    border: solid lightgreen;
+    width: 600px;
+}
+
 .hero {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    border: solid lightskyblue;
+}
+
+.hero-text {
+    border: solid lightsalmon;
+}
+
+.hero-button {
+
+}
+
+.img1 {
+    width: 650px;
+    height: auto;
 }
 
 .hero-text, ul {
@@ -33,22 +73,34 @@ img {
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+    align-self: flex-start;
 }
 
 .header-top {
     display: flex;
-    flex-direction: column;
-    border: solid red;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .links  {
     align-self: flex-end;
+    display: flex;
 }
 
+.rinfo {
+    padding-left: 15%;
+    padding-right: 15%;
+}
 
+.quote {
+    padding-left: 15%;
+    padding-right: 15%;
+}
 
-
-
+.action {
+    padding-left: 15%;
+    padding-right: 15%;
+}
 
 .footer {
     display: flex;
